# CoreHook.Host

./: .appveyor.yml  .gitignore  CMakeLists.txt  CoreRunDLL.cpp  README.md  win-vs-2017.bat
Linux/: coreruncommon.cpp  coreruncommon.h
Linux and macOS/: Makefile  coreruncommon.cpp
Unix/: Makefile  coreruncommon.cpp
Windows/: CMakeLists.txt  CoreRunDLL.cpp  CoreRunDll.sln  corerundll.sln
Windows/src/CoreRunDll/: CoreRunDll.vcxproj  corerundll.cpp  logger.cpp  pipelogger.h
Windows/src/clr/inc/: clretwallmain.h  clreventpipewriteevents.h  clrxplatevents.h  etmdummy.h
Windows/src/clr/inc/etw/: ClrEtwAll.h  ClrEtwAll.rc  etwmacros.h
Windows/src/corerundll/: CMakeLists.txt  corerundll.cpp  corerundll.h  corerundll.vcxproj  logger.cpp  logger.h  pipelogger.cpp
Windows/src/inc/: switches.h
Windows/src/utilcode/: clrhost_nodependencies.cpp  stacktrace.cpp  winfix.cpp
Windows/src/utilcodestaticnohost/: utilcodestaticnohost.vcxproj
Windows/tests/corerundll-test/: assembly-test.cpp  corerundll-test.vcxproj
Windows/tests/dotnet/: Calculator.cs
scripts/: win-vs-2017.cmd
src/: CMakeLists.txt  corerundll.cpp  corerundll.h  logger.h
src/coreload/: CMakeLists.txt  arguments.cc  arguments.h  coreclr.cc  coreclr.h  corehost.cc  corehost.h  coreload.cc  coreload.h  deps_entry.cc  deps_entry.h  deps_format.cc  deps_format.h  deps_resolver.cc  deps_resolver.h  framework_info.cc  framework_info.h  fx_definition.cc  fx_definition.h  fx_muxer.cc  fx_muxer.h  fx_muxer.messages.cc  fx_reference.cc  fx_reference.h  fx_ver.cc  fx_ver.h  host_startup_info.cc  host_startup_info.h  hostpolicy.cc  hostpolicy.h  libhost.cc  libhost.h  roll_fwd_on_no_candidate_fx_option.h  runtime_config.cc  runtime_config.h  status_code.h  version.cc  version.h
src/coreload/common/: longfile.cc  longfile.h  pal.cc  pal.h  pal.windows.cc  path_utils.cc  path_utils.h  trace.cc  trace.h  utils.cc  utils.h
src/coreload/dll/: CMakeLists.txt  coreload.cc  coreload.h  coreload.rc  coreload_dll.cc  coreload_dll.h  targetver.h
src/coreload/json/casablanca/include/cpprest/: asyncrt_utils.h  json.h
src/coreload/json/casablanca/include/cpprest/details/: cpprest_compat.h
src/coreload/logging/: logging.cc  logging.h
tests/: assembly-test.cpp  coreload_test.cc  logging_test.cc
tests/dotnet/: Calculator.cs
tests/msvc/: corerundll-test.vcxproj
